# champsim_neural_network_exploration

./: README.md
ChampSim/: Makefile  champsim_config.json  champsim_config_nn.json  champsim_config_nn_outputs.json
ChampSim/prefetcher/: nn-outputs.cc
ChampSim/prefetcher/nn-champsim/: nn-champsim.cc
Python Scripts/: ThreadedBaselines.py  genetic_algorithm_offline  genetic_algorithm_offline.py  genetic_algorithm_online.py
Python Scripts/Threadedbaselines/: ThreadedBaselines.py
Python Scripts/Threadedbaselines/results/: instr.txt
neural_nets/: CMakeLists.txt  nn-model-architecture.cpp  nn-offline.cpp  nn-online.cpp  offline-optimal.cpp  online-optimal.cpp  rnn-offline.cpp  rnn-online.cpp
neural_nets/include/: neural_net.h
